feat(*): initial commit [POR-001]

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -8,5 +8,5 @@ const t = useTranslations(lang);
 ---
 
 <Layout title={t('title.home')}>
-    <AboutSection/>
+    <AboutSection></AboutSection>
 </Layout>
