--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,50 +1,48 @@
 ---
+import '@fontsource-variable/fira-code';
+import { ViewTransitions } from 'astro:transitions';
+import Nav from '@components/Nav.astro';
+import LanguagePicker from '@components/LanguagePicker.astro';
+import Social from '@components/Social.astro';
+import { getLangFromUrl } from '@i18n/utils';
+
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
+
+const lang = getLangFromUrl(Astro.url);
+
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={lang}>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta charset="UTF-8"/>
+		<meta name="description" content="Astro description"/>
+		<meta name="viewport" content="width=device-width"/>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
+		<meta name="generator" content={Astro.generator}/>
+
 		<title>{title}</title>
+		<ViewTransitions/>
 	</head>
 	<body>
-		<slot />
+		<header>
+			<Nav></Nav>
+		</header>
+
+		<main transition:animate="slide">
+			<slot />
+		</main>
+
+		<footer>
+			<Social></Social>
+			<LanguagePicker/>
+		</footer>
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+	@import '../styles/global.css';
 </style>
