--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro';
-import SkillsSection from '@components/Skills.astro';
+import SkillsSection from '@sections/Skills.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
