--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/Layout.astro';
-import WorksSection from '@components/Works.astro';
+import WorksSection from '@sections/Works.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
