--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -1,23 +1,22 @@
 ---
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
-import { Icon } from 'astro-icon/components';
-import Section from './Section.astro';
+import Section from '@components/Section.astro';
+import SkillCard from '@components/SkillCard.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
-interface Skills {
+interface Skill {
     title: string;
-    description: string;
     icons: Icon[];
 }
 
 interface Icon {
-    name: string;
-    description: string;
+  name: string;
+  description: string;
 }
 
-const skills: Skills[] = [
+const skills: Skill[] = [
     {
         title: t('skills.languages.title'),
         icons: [
@@ -165,82 +164,6 @@ const skills: Skills[] = [
 
 <Section name="skills">
     {skills.map((skill: Skill) => (
-        <div class="skill-card">
-            <h3 class="skill-card__title">{skill.title}</h3>
-            <div class="skill-container">
-                {skill.icons.map((icon: Icon) => (
-                    <div class="skill-icon">
-                        <Icon class="skill-icon__icon" name={icon.name} title={icon.description} size="32"/>
-                        <p class="skill-icon__description">{icon.description}</p>
-                    </div>
-                ))}
-            </div>
-        </div>
+       <SkillCard icons={skill.icons} title={skill.title}/>
     ))}
 </Section>
-<style>
-    .skill-card {
-        width: 100%;
-        height: auto;
-        margin-bottom: 24px;
-        border: 1px solid var(--gray-color);
-        animation: borderAnimation 6s infinite linear;
-        border-image: linear-gradient(90deg, var(--gray-color), var(--gray-color), var(--gray-color), var(--gray-color)) 1;
-
-        .skill-card__title {
-            width: 100%;
-            padding: 16px;
-            border-bottom: 1px solid var(--gray-color);
-            color: var(--white-color);
-            margin: 0;
-            font-size: 1.6rem;
-            font-weight: 500;
-        }
-    }
-    .skill-container {
-        width: 100%;
-        height: auto;
-        padding: 16px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 24px;
-    }
-    .skill-icon {
-        width: 45%;
-        min-width: 140px;
-        height: auto;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        gap: 8px;
-
-        .skill-icon__description {
-            margin: 0;
-            color: var(--gray-color);
-        }
-    }
-    @keyframes borderAnimation {
-        0% {
-            border-image-source: linear-gradient(90deg, var(--primary-color), var(--primary-color), var(--gray-color), var(--gray-color));
-        }
-        25% {
-            border-image-source: linear-gradient(180deg, var(--primary-color), var(--primary-color), var(--gray-color), var(--gray-color));
-        }
-        50% {
-            border-image-source: linear-gradient(270deg, var(--primary-color), var(--primary-color), var(--gray-color), var(--gray-color));
-        }
-        75% {
-            border-image-source: linear-gradient(360deg, var(--primary-color), var(--primary-color), var(--gray-color), var(--gray-color));
-        }
-        100% {
-            border-image-source: linear-gradient(90deg, var(--primary-color), var(--primary-color), var(--gray-color), var(--gray-color));
-        }
-    }
-    @media (prefers-reduced-motion: reduce) {
-        .skill-card {
-            animation: none;
-        }
-    }
-</style>
