feat(*): initial commit [POR-001]

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -28,7 +28,7 @@ const t = useTranslations(lang);
     .title-container {
         width: 100%;
         height: auto;
-        margin: 12px 0;
+        margin: 12px 0 24px 0;
         display: flex;
         justify-content: start;
         align-items: center;
