--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,10 +10,22 @@ interface Props {
   title: string;
   technologies: string;
   hasLink: boolean;
-  link?: string;
+  hasWebsite: boolean;
+  github?: string;
+  website?: string;
 }
 
-const { image, alt, video, title, technologies, hasLink, link } = Astro.props;
+const {
+    image,
+    alt,
+    video,
+    title,
+    technologies,
+    hasLink,
+    github,
+    hasWebsite,
+    website
+} = Astro.props;
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -28,18 +40,27 @@ const t = useTranslations(lang);
         <div class="card-body-description">
             <slot></slot>
         </div>
-      {hasLink && (
-              <a class="card-body__link" href={link} title={t('project.card.title')} target="_blank" rel="noopener noreferrer">
-                  <span>{t('project.card.link')}</span>
+      <div class="card-body-links">
+          {hasLink && (
+              <a class="card-body__link" href={github} title={t('project.card.github.title')} target="_blank" rel="noopener noreferrer">
+                  <span>{t('project.card.github.link')}</span>
                   <Icon name="forward" title="Forward" size="18"/>
               </a>
-      )}
+          )}
+          {hasWebsite && (
+              <a class="card-body__link card-body__link--gray" href={website} title={t('project.card.website.title')} target="_blank" rel="noopener noreferrer">
+                  <span>{t('project.card.website.link')}</span>
+                  <Icon name="double-arrow" title="Double Arrow" size="18"/>
+              </a>
+          )}
+      </div>
     </div>
 </div>
 <style>
     .project-card {
         width: 100%;
         height: auto;
+        margin-bottom: 32px;
         position: relative;
         border: 1px solid var(--primary-color);
     }
@@ -73,21 +94,38 @@ const t = useTranslations(lang);
             font-size: 1.5rem;
             line-height: 24px;
         }
+    }
+    .card-body-links {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 18px;
+
         .card-body__link {
             width: max-content;
             height: 40px;
-            padding: 8px;
             margin-top: 16px;
+            padding: 8px 16px;
             display: flex;
             justify-content: center;
             align-items: center;
             border: 1px solid var(--primary-color);
             color: var(--primary-color);
             font-weight: 500;
+
+            span {
+                margin-right: 4px;
+            }
         }
         .card-body__link:hover {
             border: 1px solid var(--white-color);
             color: var(--white-color);
+        }
+        .card-body__link--gray {
+            border: 1px solid var(--gray-color);
+            color: var(--gray-color);
         }
     }
 </style>
