--- a/src/islands/project-video/project-video.css
+++ b/src/islands/project-video/project-video.css
@@ -22,8 +22,9 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        background-image: url('/src/assets/play-button.png');
-        opacity: 0.4;
+        background-image: url('/src/assets/play-button.webp');
+        background-color: var(--gray-color);
+        opacity: 0.5;
         cursor: pointer;
         z-index: 100;
     }
