feat(*): initial commit [POR-001]

--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -155,6 +155,10 @@ const skills: Skill[] = [
         {
           name: 'cordova',
           description: t('skills.cordova.description'),
+        },
+        {
+          name: 'threejs',
+          description: t('skills.threejs.description'),
         }
       ]
     }
