--- a/src/components/TimelineList.astro
+++ b/src/components/TimelineList.astro
@@ -15,7 +15,7 @@ const { title, time } = Astro.props;
     <h3 class="timeline-item__title">{title}</h3>
     <time class="timeline-item__time">{time}</time>
     <div class="timeline-item-description-container">
-        <slot></slot>
+        <slot/>
     </div>
 </li>
 <style>
