--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -16,7 +16,7 @@ const t = useTranslations(lang);
         <h2 class="title"><span>#</span>{t(`section.${name}`)}</h2>
         <div class="divider" aria-hidden="true"></div>
     </div>
-    <slot></slot>
+    <slot/>
 </section>
 <style>
     section {
