feat(*): initial commit [POR-001]

--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -24,8 +24,9 @@ const { title, icons } = Astro.props;
 </div>
 <style>
     .skill-card {
-        width: 100%;
-        height: auto;
+        width: 350px;
+        min-width: 300px;
+        height: max-content;
         margin-bottom: 24px;
         border: 1px solid var(--gray-color);
         animation: borderAnimation 6s infinite linear;
