--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -60,6 +60,9 @@ const socials: Social[] = [
         color: var(--gray-color);
         cursor: pointer;
     }
+    .social-icon-container:first-of-type {
+        padding-left: 0;
+    }
     .social-icon-container:hover {
         color: var(--white-color);
         transform: scale(1.2);
