--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const lang = getLangFromUrl(Astro.url);
 			<Navbar></Navbar>
 		</header>
 
-		<main transition:animate="slide">
+		<main transition:animate="fade">
 			<slot />
 		</main>
 
