--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -13,7 +13,7 @@ const { text, company, imagePath, altText } = Astro.props;
 
 <div class="banner">
     <figure class="banner-image-container">
-        <CustomImage className="banner-image" imagePath={imagePath} altText={altText}/>
+        <CustomImage className="banner-image" width={300} height={300} quality="high" imagePath={imagePath} altText={altText}/>
     </figure>
     <div class="banner-work-container">
         <p class="work-text">{text} <span class="work-text__company">{company}</span></p>
