--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -58,8 +58,9 @@ const t = useTranslations(lang);
 </div>
 <style>
     .project-card {
-        width: 100%;
-        height: auto;
+        width: 350px;
+        min-width: 300px;
+        height: max-content;
         margin-bottom: 32px;
         position: relative;
         border: 1px solid var(--primary-color);
