--- a/src/sections/Skills.astro
+++ b/src/sections/Skills.astro
@@ -167,7 +167,17 @@ const skills: Skill[] = [
 ---
 
 <Section name="skills">
-    {skills.map((skill: Skill) => (
-       <SkillCard icons={skill.icons} title={skill.title}/>
-    ))}
+    <div class="skills-grid">
+      {skills.map((skill: Skill) => (
+              <SkillCard icons={skill.icons} title={skill.title}/>
+      ))}
+    </div>
 </Section>
+<style>
+    .skills-grid {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+</style>
