--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -24,7 +24,8 @@ const { title, icons } = Astro.props;
 </div>
 <style>
     .skill-card {
-        width: 350px;
+        width: 100%;
+        max-width: 400px;
         min-width: 300px;
         height: max-content;
         margin-bottom: 24px;
