feat(*): initial commit [POR-001]

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -35,8 +35,8 @@ const navItems: Nav[] = [
         icon: 'project'
     },
     {
-        name: t('nav.contacts'),
-        link: 'contacts',
+        name: t('nav.contact'),
+        link: 'contact',
         icon: 'contact'
     }
 ];
