--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,7 +2,7 @@
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
 interface Props {
-  name: 'works' | 'skills' | 'projects' | 'contacts';
+  name: 'works' | 'skills' | 'projects' | 'contact';
 }
 
 const { name } = Astro.props;
