--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,3 +1,101 @@
 ---
+import '@fontsource-variable/fira-code';
+import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import { ROUTES } from '@i18n/ui';
 
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+const title = t('not.found.title');
 ---
+
+<!doctype html>
+<html lang={lang}>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="description" content="Astro description"/>
+    <meta name="viewport" content="width=device-width"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
+    <title>{title}</title>
+</head>
+<body>
+<main>
+   <section class="not-found-section">
+       <h1 class="not-found-status">4&#9785;4</h1>
+       <h2 class="not-found-title">{t('not.found.header')}</h2>
+       <a class="not-found-link" href={ROUTES[lang]} title={t('not.found.link')}>{t('not.found.link')}</a>
+   </section>
+</main>
+
+</body>
+</html>
+<style>
+    @import '../styles/global.css';
+    main {
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+    .not-found-section {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 16px;
+    }
+    .not-found-status {
+        margin: 0;
+        font-size: 64px;
+        letter-spacing: 12px;
+        color: var(--primary-color);
+    }
+    .not-found-title {
+        margin-top: 0;
+        text-align: center;
+        text-wrap: pretty;
+        line-height: 54px;
+        color: var(--primary-color);
+    }
+    .not-found-title::after {
+        content: '|';
+        opacity: 1;
+        display: inline-block;
+        color: var(--primary-color);
+        will-change: opacity;
+        animation-name: machine;
+        animation-iteration-count: infinite;
+        animation-duration: .7s;
+        animation-timing-function: ease-in-out;
+    }
+    .not-found-link {
+        width: 200px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2.4rem;
+        font-weight: 500;
+        border: 2px var(--primary-color) inset;
+        color: var(--primary-color);
+        cursor: pointer;
+    }
+    .not-found-link:hover {
+        border: 2px var(--white-color) outset;
+        color: var(--white-color);
+    }
+    @keyframes machine {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    @media (prefers-reduced-motion: reduce) {
+        .about-title::after {
+            animation: none;
+        }
+    }
+</style>
