--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@ const { title } = Astro.props;
 
 const lang = getLangFromUrl(Astro.url);
 
+Astro.response.headers.set('CDN-Cache-Control', 'public, max-age=45, must-revalidate');
 ---
 
 <!doctype html>
