feat(*): initial commit [POR-001]

--- a/src/components/AboutTitle.astro
+++ b/src/components/AboutTitle.astro
@@ -13,7 +13,7 @@ const { author, rol } = Astro.props;
         line-height: 40px;
         font-weight: 600;
         font-size: 2.5rem;
-        color: var(--white-color);
+        color: var(--secondary-color);
         .about-title__rol {
             color: var(--primary-color);
         }
