--- a/src/components/DownloadButton.astro
+++ b/src/components/DownloadButton.astro
@@ -33,7 +33,7 @@ const { link, title, ariaLabel, icon, linkText } = Astro.props;
         transition: border 0.3s ease-in-out;
     }
     .download-button:hover {
-        color: var(--white-color);
-        border: 1px inset var(--white-color);
+        color: var(--secondary-color);
+        border: 1px inset var(--secondary-color);
     }
 </style>
