--- a/src/components/SkillIcon.astro
+++ b/src/components/SkillIcon.astro
@@ -25,7 +25,7 @@ const { name, description } = Astro.props;
 
         .skill-icon__description {
             margin: 0;
-            color: var(--gray-color);
+            color: var(--tertiary-color);
         }
     }
 </style>
