--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -58,14 +58,14 @@ const socials: Social[] = [
         width: max-content;
         height: auto;
         padding: 0 6px;
-        color: var(--gray-color);
+        color: var(--tertiary-color);
         cursor: pointer;
     }
     .social-icon-container:first-of-type {
         padding-left: 0;
     }
     .social-icon-container:hover {
-        color: var(--white-color);
+        color: var(--secondary-color);
         transform: scale(1.2);
     }
 </style>
