--- a/src/components/TimelineList.astro
+++ b/src/components/TimelineList.astro
@@ -52,14 +52,14 @@ const { title, time } = Astro.props;
         display: block;
         font-size: 1.6rem;
         font-weight: lighter;
-        color: var(--white-color);
+        color: var(--secondary-color);
     }
     .timeline-item-description-container {
         margin-top: 12px;
         text-wrap: pretty;
         font-weight: normal;
         line-height: 24px;
-        color: var(--gray-color);
+        color: var(--tertiary-color);
 
         p {
             font-size: 1.6rem;
