--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -88,8 +88,8 @@ const title = t('not.found.title');
         cursor: pointer;
     }
     .not-found-link:hover {
-        border: 2px var(--white-color) outset;
-        color: var(--white-color);
+        border: 2px var(--secondary-color) outset;
+        color: var(--secondary-color);
     }
     @keyframes machine {
         0% {
