--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -20,7 +20,7 @@ const t = useTranslations(lang);
 </Section>
 <style>
     .contact-title {
-        color: var(--gray-color);
+        color: var(--tertiary-color);
         font-size: 1.6rem;
         font-weight: 500;
         text-wrap: pretty;
