--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -63,7 +63,7 @@ const navItems: Nav[] = [
         width: 100%;
         height: 80px;
         align-content: center;
-        border-top: 1px solid var(--gray-color);
+        border-top: 1px solid var(--tertiary-color);
         background-color: var(--backgroud-color);
     }
     .list-container {
@@ -82,11 +82,11 @@ const navItems: Nav[] = [
             row-gap: 6px;
             font-size: 1.2rem;
             font-weight: 500;
-            color: var(--gray-color);
+            color: var(--tertiary-color);
         }
         .list-item__link--active,
         .list-item__link:hover {
-            color: var(--white-color);
+            color: var(--secondary-color);
         }
         .list-item__link--active::before,
         .list-item__link:hover::before {
