--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -75,7 +75,7 @@ const t = useTranslations(lang);
         border-bottom: 1px solid var(--primary-color);
         color: var(--primary-color);
         text-wrap: wrap;
-        font-weight: 300;
+        font-weight: 400;
         font-size: 1.4rem;
         line-height: 18px;
     }
@@ -86,7 +86,7 @@ const t = useTranslations(lang);
 
         .card-body__title {
             margin: 0;
-            color: var(--white-color);
+            color: var(--secondary-color);
             font-weight: 400;
             font-size: 2.2rem;
             text-wrap: balance;
@@ -94,7 +94,7 @@ const t = useTranslations(lang);
         .card-body-description p {
             margin-bottom: 0;
             margin-top: 12px;
-            color: var(--gray-color);
+            color: var(--tertiary-color);
             text-wrap: balance;
             font-size: 1.5rem;
             line-height: 24px;
@@ -125,12 +125,12 @@ const t = useTranslations(lang);
             }
         }
         .card-body__link:hover {
-            border: 1px solid var(--white-color);
-            color: var(--white-color);
+            border: 1px solid var(--secondary-color);
+            color: var(--secondary-color);
         }
         .card-body__link--gray {
-            border: 1px solid var(--gray-color);
-            color: var(--gray-color);
+            border: 1px solid var(--tertiary-color);
+            color: var(--tertiary-color);
         }
     }
 </style>
