--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -45,7 +45,7 @@ const t = useTranslations(lang);
         font-weight: 400;
         font-size: 24px;
         text-wrap: balance;
-        color: var(--white-color);
+        color: var(--secondary-color);
         span {
             margin-right: 8px;
             color: var(--primary-color);
