--- a/src/islands/contact-form/contact-form.css
+++ b/src/islands/contact-form/contact-form.css
@@ -1,26 +1,3 @@
-input, textarea, button,
-input::placeholder,
-textarea::placeholder {
-    color: var(--gray-color);
-    font-family: 'Fira Code Variable', monospace;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-size: 1.6rem;
-    font-style: normal;
-}
-
-input:-webkit-autofill {
-    -webkit-text-fill-color: var(--gray-color);
-    background-color: var(--backgroud-color);
-    color: var(--gray-color);
-    transition: background-color 5000s ease-in-out 0s;
-}
-
-input:focus-visible,
-textarea:focus-visible {
-    outline: var(--primary-color) auto 1px;
-}
-
 .contact-form {
     width: 100%;
     height: auto;
@@ -28,6 +5,33 @@ textarea:focus-visible {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    input, textarea, button,
+    input::placeholder,
+    textarea::placeholder {
+        color: var(--tertiary-color);
+        font-family: 'Fira Code Variable', monospace;
+        font-optical-sizing: auto;
+        font-weight: 300;
+        font-size: 1.6rem;
+        font-style: normal;
+    }
+
+    button {
+        color: var(--primary-color);
+    }
+
+    input:-webkit-autofill {
+        -webkit-text-fill-color: var(--tertiary-color);
+        background-color: var(--backgroud-color);
+        color: var(--tertiary-color);
+        transition: background-color 5000s ease-in-out 0s;
+    }
+
+    input:focus-visible,
+    textarea:focus-visible {
+        outline: var(--primary-color) auto 1px;
+    }
 }
 
 .form-field {
@@ -41,7 +45,7 @@ textarea:focus-visible {
     width: 100%;
     height: 100%;
     display: block;
-    color: var(--gray-color);
+    color: var(--tertiary-color);
     font-size: 1.8rem;
     font-weight: 300;
     margin-bottom: 8px;
@@ -51,9 +55,9 @@ textarea:focus-visible {
     width: 100%;
     height: 37px;
     padding: 8px;
-    border: 1px solid var(--gray-color);
+    border: 1px solid var(--tertiary-color);
     border-radius: 0;
-    color: var(--gray-color);
+    color: var(--tertiary-color);
     background-color: var(--backgroud-color);
 }
 
@@ -61,8 +65,8 @@ textarea:focus-visible {
     width: 100%;
     height: 120px;
     padding: 8px;
-    border-color: 1px solid var(--gray-color);
-    color: var(--gray-color);
+    border-color: 1px solid var(--tertiary-color);
+    color: var(--tertiary-color);
     background-color: var(--backgroud-color);
     border-radius: 0;
     resize: none;
@@ -72,7 +76,6 @@ textarea:focus-visible {
     width: 100%;
     height: 48px;
     background-color: var(--backgroud-color);
-    color: var(--primary-color);
     border: 1px outset var(--primary-color);
     cursor: pointer;
 
@@ -83,12 +86,12 @@ textarea:focus-visible {
 }
 
 .form-submit:hover {
-    border: 1px inset var(--white-color);
-    color: var(--white-color);
+    border: 1px inset var(--secondary-color);
+    color: var(--secondary-color);
 }
 
 .form-submit[disabled] {
-    border: 1px solid var(--gray-color);
-    color: var(--gray-color);
+    border: 1px solid var(--tertiary-color);
+    color: var(--tertiary-color);
     cursor: default;
 }
