--- a/src/islands/select-language/select-language.css
+++ b/src/islands/select-language/select-language.css
@@ -3,13 +3,13 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    --backgroud-icon-color: var(--gray-color);
+    --backgroud-icon-color: var(--tertiary-color);
 }
 .language-icon {
     color: var(--backgroud-icon-color);
 }
 .language-container:hover {
-    --backgroud-icon-color: var(--white-color)
+    --backgroud-icon-color: var(--secondary-color)
 }
 
 .language-select {
