--- a/src/sections/About.astro
+++ b/src/sections/About.astro
@@ -41,7 +41,7 @@ const t = useTranslations(lang);
             font-weight: 400;
             line-height: 24px;
             text-wrap: pretty;
-            color: var(--gray-color);
+            color: var(--tertiary-color);
         }
     }
 </style>
